# yaret

lib_yaret/php/: classes.php
yaret/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  delit.directory  delit.kdevprj  delit.kdevses  delit.lsm  libtool  qttest.kdevprj  qttest.kdevses  subdirs
yaret/admin/: mkinstalldirs
yaret/delit/: ClientDlg.cpp  ClientDlg.h  ClientDlg.moc  ClientDlg.moc.cpp  ClientDlg.ui  Makefile  Makefile.am  Makefile.in  clienttestdlg.cpp  clienttestdlg.h  clienttestdlg.moc.cpp  delit  genui  main.cpp
yaret/delit/.deps/: ClientDlg.Po  ClientDlg.moc.Po  clienttestdlg.Po  clienttestdlg.moc.Po  database.Po  main.Po
yaret/delit/docs/: Makefile  Makefile.in
yaret/delit/docs/en/: Makefile  Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
